Fix for vertical scrollbar handling

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -4,7 +4,6 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   gap: var(--size-fluid-2);
-  width: 100vw;
 }
 
 main {
@@ -23,12 +22,12 @@ main * {
 
 /* add margin if scroll bar not visible
    Note: leaving space for a scroll bar can result in obviously uneven margins
-   on smaller screens when there is no scroll bar.  This is a non-issue on
-   mobile or other environments with overlay scrollbars, but it's probably worth
-   putting this behind a media query for the sake of smaller desktop screens. */
-@media screen and (min-width: 640px) {
-  html {
-    margin-left: calc(100vw - 100%);
-    margin-right: 0;
-  }
+   on smaller screens when there is no scroll bar.  This is potentially an issue
+   on environments without overlay scrollbars and very narrow viewports, but 
+   such environments are very uncommon and in my contrived examples behaviour
+   is entirely acceptable imo. */
+body {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+  overflow-x: hidden;
 }
